fixed button alignments

--- a/spotify-player/src/App.css
+++ b/spotify-player/src/App.css
@@ -40,10 +40,20 @@
 }
 
 #tempList {
-  max-height: 50vh;
+  position: relative;
+  max-height: 60vh;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .track {
+  width: 75%;
   margin: 1px;
+}
+
+@media only screen and (max-width: 600px) {
+  #middle {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
 }
